--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,21 +20,7 @@ jobs:
     - run: |
         nix build
     - name: Create release
-      id: create_release
-      uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-    - name: Upload release asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./result/bin/zwift.wasm
-        asset_name: zwift.wasm
-        asset_content_type: application/octet-stream
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        gh release create ${{ github.ref }} ./result/bin/zwift.wasm --title "Release ${{ github.ref }}" --notes "Release ${{ github.ref }}"
